WS2-718 Header z-index fix to avoid admin toolbar vertical overlay of header.

--- a/css/asu_brand.header.css
+++ b/css/asu_brand.header.css
@@ -26,6 +26,7 @@ body.toolbar-horizontal {
 #headerContainer.asu-brand-toolbar-header-tray-open-compat-vertical header,
 #headerContainer.asu-brand-toolbar-header-tray-closed-compat-vertical header {
   top:39px;
+  z-index: 1200 !important;
 }
 body.toolbar-vertical,
 body.toolbar-vertical.toolbar-tray-open {
